--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "czy5369@gmail.com",
   "dependencies": {
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
@@ -12,7 +12,8 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "node": "18.16.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
@@ -32,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/zzzhyuan98/myApp.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
